--- a/src/panels/index.css
+++ b/src/panels/index.css
@@ -1,6 +1,7 @@
 .logo {
   display: block;
   margin: auto;
+  margin-bottom: 10px;
 }
 /* .Tab {
   padding-top: 4px;
@@ -17,10 +18,15 @@
   border: 0.5px solid #b5cadd;
   background: #fff;
   padding: 12px;
+  width: 60%;
+  margin-top: 40px;
 }
-.button-group {
+.msg.center {
+  align-self: center;
+}
+/* .button-group {
   vertical-align: bottom;
-}
+} */
 .home-text {
   width: 60%;
   align-self: center;
@@ -34,3 +40,24 @@
 /* .header {
   text-align: center;
 } */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+input:active,
+:hover,
+:focus {
+  outline: 0;
+  outline-offset: 0;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.input {
+  margin-bottom: 20px;
+}
+.input-title {
+  color: #6d7885;
+  padding-bottom: 5px;
+}
