--- a/src/panels/index.css
+++ b/src/panels/index.css
@@ -10,7 +10,7 @@
 .menu-container {
   display: flex;
   flex-direction: column;
-  min-height: 75vh;
+  min-height: 80vh;
   justify-content: space-between;
 }
 .msg {
@@ -18,17 +18,31 @@
   border: 0.5px solid #b5cadd;
   background: #fff;
   padding: 12px;
-  width: 60%;
+  width: 65%;
   margin-top: 40px;
 }
 .msg.center {
   align-self: center;
 }
+.msg-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0;
+  gap: 10px;
+}
+.msg-group .msg {
+  margin-top: 0;
+}
+.msg .logo {
+  width: -webkit-fill-available;
+}
 /* .button-group {
-  vertical-align: bottom;
+  position: fixed;
+  bottom: 60px;
 } */
 .home-text {
-  width: 60%;
+  width: 80%;
   align-self: center;
 }
 .text {
@@ -37,9 +51,9 @@
   gap: 10px;
   margin-bottom: 30px;
 }
-/* .header {
-  text-align: center;
-} */
+.margin-top {
+  margin-top: 10px;
+}
 input[type="number"] {
   -moz-appearance: textfield;
 }
