--- a/src/panels/index.css
+++ b/src/panels/index.css
@@ -3,6 +3,9 @@
   margin: auto;
   margin-bottom: 10px;
 }
+.account-img {
+  width: -webkit-fill-available;
+}
 /* .Tab {
   padding-top: 4px;
   padding-bottom: 8px;
@@ -18,7 +21,7 @@
   border: 0.5px solid #b5cadd;
   background: #fff;
   padding: 12px;
-  width: 65%;
+  width: 70%;
   margin-top: 40px;
 }
 .msg.center {
