--- a/src/panels/index.css
+++ b/src/panels/index.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   min-height: 80vh;
   justify-content: space-between;
+  /* background-color: #fff; */
 }
 .msg {
   border-radius: 20px 20px 20px 8px;
@@ -23,6 +24,7 @@
   padding: 12px;
   width: 70%;
   margin-top: 40px;
+  color: #000;
 }
 .msg.center {
   align-self: center;
