--- a/src/panels/index.css
+++ b/src/panels/index.css
@@ -15,7 +15,6 @@
   flex-direction: column;
   min-height: 80vh;
   justify-content: space-between;
-  /* background-color: #fff; */
 }
 .msg {
   border-radius: 20px 20px 20px 8px;
@@ -42,17 +41,12 @@
 .msg .logo {
   width: -webkit-fill-available;
 }
-/* .button-group {
-  position: fixed;
-  bottom: 60px;
-} */
-.button-link {
-  color: #fff;
+.inline-link {
+  color: #2d81e0;
   text-decoration: none;
-}
-.button-link:hover {
-  color: #fff;
-  text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
 }
 .home-text {
   width: 80%;
@@ -87,4 +81,11 @@ input::-webkit-inner-spin-button {
 .input-title {
   color: #6d7885;
   padding-bottom: 5px;
+}
+a {
+  width: 100%;
+  text-decoration: none;
+}
+.svg svg {
+  display: inline-block;
 }
