--- a/src/panels/index.css
+++ b/src/panels/index.css
@@ -13,8 +13,9 @@
 .menu-container {
   display: flex;
   flex-direction: column;
-  min-height: 80vh;
   justify-content: space-between;
+  height: calc(100vh - 100px);
+  box-sizing: border-box;
 }
 .msg {
   border-radius: 20px 20px 20px 8px;
